fix icons on mobile

--- a/src/pages/Home/Icon/Icons.module.scss
+++ b/src/pages/Home/Icon/Icons.module.scss
@@ -43,40 +43,3 @@
     right: 5%;
   }
 }
-
-@media (max-width: 560px) {
-  .logo{
-    &:first-child{
-      top: 10%;
-      left: 3%;
-    }
-    &:nth-child(2){
-      top: 30%;
-      left: 78%;
-    }
-    &:nth-child(3){
-      top: 75%;
-      right: -53%;
-    }
-    &:nth-child(4){
-      top: 93%;
-      right: -3%;
-    }
-    &:nth-child(5){
-      top: -7%;
-      right: 28%;
-    }
-    &:nth-child(6){
-      top: 49%;
-      right: 80%;
-    }
-    &:nth-child(7){
-      top: 67%;
-      right: -11%;
-    }
-    &:nth-child(8){
-      top: -55px;
-      right: -55%;
-    }
-  }
-}
